bug fix : pages display

--- a/templates/figure_form.html.twig
+++ b/templates/figure_form.html.twig
@@ -28,7 +28,7 @@
                                     </svg>
                                 </a>
                             </div>
-                            <div class="form-first-image">  
+                            <div class="form-first-image col-12">  
                                 <img src="{{ asset('/images/site') }}/replace-main.jpg" class="card-img-top" alt="Remplacer l'image principale">
                             </div>
                         </div>
