--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -30,7 +30,7 @@
     </section>
 
     {% for message in app.flashes('notice') %}
-        <div class="flash-notice col-4 p-3 mx-auto d-flex flex-column align-items-center justify-content-center">
+        <div class="flash-notice col-8 col-sm-4 p-3 mx-auto d-flex flex-column align-items-center justify-content-center">
                 <h5 class="mb-2">Notice : </h5>
                 <p>{{ message }}</p>
         </div>
