bug fix : remove signin controller (replace by SecurityController)

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 {% block description %}Page de connexion {% endblock %}
 {% block image %}{{ asset('/images/site/main.jpg') }}{% endblock %}
 {% block type %} Website {% endblock %}
-{% block url %} {{ url('signin') }} {% endblock %}
+{% block url %} {{ url('app_login') }} {% endblock %}
 
 {% block body %}
 <section class="login-section col-12 col-xl-6 mx-auto d-flex flex-column align-items-center" >   
